syntax = "proto3";

package qianxia.IMChat;

option go_package = "IMChat/pb";

import "response.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service FriendshipService {

    // 更新好友信息
    rpc UpdateFriend (UpdateFriendRequest) returns (Response) {
        option (google.api.http) = {
            put: "/v1/friendship"
            body: "*"
        };
    };

    // 删除好友
    rpc DeleteFriend (DeleteFriendRequest) returns (Response) {
        option (google.api.http) = {
            delete: "/v1/friendship"
        };
    };

    // 获取好友列表
    rpc ListFriend (google.protobuf.Empty) returns (stream ListFriendResponse) {
        option (google.api.http) = {
            get: "/v1/friendship"
        };
    };
}

message UpdateFriendRequest {
    int32 friend_id = 1;
    string note = 2;
}

message DeleteFriendRequest {
    int32 friend_id = 1;
}

message ListFriendResponse {
    int32 friend_id = 1;
    string note = 2;
    string avatar = 3;
}